tests/src/snapshots/fe_compiler_tests__analysis__case_027_multi_param.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                            (
                                "y",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                            (
                                "z",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Array(
                            Array {
                                size: 3,
                                inner: Numeric(
                                    U256,
                                ),
                            },
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/multi_param.fe:4:9
  │
4 │         my_array[0] = x
  │         ^^^^^^^^ attributes hash: 4935018943425161537
  │
  = ExpressionAttributes {
        typ: Array(
            Array {
                size: 3,
                inner: Numeric(
                    U256,
                ),
            },
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:4:18
  │
4 │         my_array[0] = x
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:4:9
  │
4 │         my_array[0] = x
  │         ^^^^^^^^^^^ attributes hash: 3617588353493611640
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:4:23
  │
4 │         my_array[0] = x
  │                       ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:5:9
  │
5 │         my_array[1] = y
  │         ^^^^^^^^ attributes hash: 4935018943425161537
  │
  = ExpressionAttributes {
        typ: Array(
            Array {
                size: 3,
                inner: Numeric(
                    U256,
                ),
            },
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:5:18
  │
5 │         my_array[1] = y
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:5:9
  │
5 │         my_array[1] = y
  │         ^^^^^^^^^^^ attributes hash: 3617588353493611640
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:5:23
  │
5 │         my_array[1] = y
  │                       ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:6:9
  │
6 │         my_array[2] = z
  │         ^^^^^^^^ attributes hash: 4935018943425161537
  │
  = ExpressionAttributes {
        typ: Array(
            Array {
                size: 3,
                inner: Numeric(
                    U256,
                ),
            },
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:6:18
  │
6 │         my_array[2] = z
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:6:9
  │
6 │         my_array[2] = z
  │         ^^^^^^^^^^^ attributes hash: 3617588353493611640
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:6:23
  │
6 │         my_array[2] = z
  │                       ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:7:16
  │
7 │         return my_array
  │                ^^^^^^^^ attributes hash: 4935018943425161537
  │
  = ExpressionAttributes {
        typ: Array(
            Array {
                size: 3,
                inner: Numeric(
                    U256,
                ),
            },
        ),
        location: Memory,
        move_location: None,
    }

note: 
  ┌─ features/multi_param.fe:2:5
  │  
2 │ ╭     pub def bar(x: u256, y: u256, z: u256) -> u256[3]:
3 │ │         my_array: u256[3]
4 │ │         my_array[0] = x
5 │ │         my_array[1] = y
6 │ │         my_array[2] = z
7 │ │         return my_array
  │ ╰───────────────────────^ attributes hash: 17869674880714962577
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
            (
                "y",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
            (
                "z",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
        ],
        return_type: Array(
            Array {
                size: 3,
                inner: Numeric(
                    U256,
                ),
            },
        ),
    }

note: 
  ┌─ features/multi_param.fe:3:9
  │
3 │         my_array: u256[3]
  │         ^^^^^^^^^^^^^^^^^ attributes hash: 5963828201795370982
  │
  = Array(
        Array {
            size: 3,
            inner: Numeric(
                U256,
            ),
        },
    )

note: 
  ┌─ features/multi_param.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: u256, y: u256, z: u256) -> u256[3]:
3 │ │         my_array: u256[3]
4 │ │         my_array[0] = x
5 │ │         my_array[1] = y
6 │ │         my_array[2] = z
7 │ │         return my_array
  │ ╰───────────────────────^ attributes hash: 5234267181997677242
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                    (
                        "y",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                    (
                        "z",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                ],
                return_type: Array(
                    Array {
                        size: 3,
                        inner: Numeric(
                            U256,
                        ),
                    },
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/multi_param.fe:2:20
  │
2 │     pub def bar(x: u256, y: u256, z: u256) -> u256[3]:
  │                    ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/multi_param.fe:2:29
  │
2 │     pub def bar(x: u256, y: u256, z: u256) -> u256[3]:
  │                             ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/multi_param.fe:2:38
  │
2 │     pub def bar(x: u256, y: u256, z: u256) -> u256[3]:
  │                                      ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/multi_param.fe:2:47
  │
2 │     pub def bar(x: u256, y: u256, z: u256) -> u256[3]:
  │                                               ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/multi_param.fe:2:47
  │
2 │     pub def bar(x: u256, y: u256, z: u256) -> u256[3]:
  │                                               ^^^^^^^ attributes hash: 5963828201795370982
  │
  = Array(
        Array {
            size: 3,
            inner: Numeric(
                U256,
            ),
        },
    )

note: 
  ┌─ features/multi_param.fe:3:19
  │
3 │         my_array: u256[3]
  │                   ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/multi_param.fe:3:19
  │
3 │         my_array: u256[3]
  │                   ^^^^^^^ attributes hash: 5963828201795370982
  │
  = Array(
        Array {
            size: 3,
            inner: Numeric(
                U256,
            ),
        },
    )


