tests/src/snapshots/fe_compiler_tests__analysis__case_075_return_pow_i256.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        I8,
                                    ),
                                ),
                            ),
                            (
                                "y",
                                Base(
                                    Numeric(
                                        U8,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                I8,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/return_pow_i256.fe:3:16
  │
3 │         return x ** y
  │                ^ attributes hash: 9715536092457030614
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                I8,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_pow_i256.fe:3:21
  │
3 │         return x ** y
  │                     ^ attributes hash: 6817314866882205962
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U8,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_pow_i256.fe:3:16
  │
3 │         return x ** y
  │                ^^^^^^ attributes hash: 9715536092457030614
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                I8,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_pow_i256.fe:2:5
  │  
2 │ ╭     pub def bar(x: i8, y: u8) -> i8:
3 │ │         return x ** y
  │ ╰─────────────────────^ attributes hash: 7362986797872325469
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        I8,
                    ),
                ),
            ),
            (
                "y",
                Base(
                    Numeric(
                        U8,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                I8,
            ),
        ),
    }

note: 
  ┌─ features/return_pow_i256.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: i8, y: u8) -> i8:
3 │ │         return x ** y
  │ ╰─────────────────────^ attributes hash: 9878815201673830083
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                I8,
                            ),
                        ),
                    ),
                    (
                        "y",
                        Base(
                            Numeric(
                                U8,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        I8,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        list_expressions: {},
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_pow_i256.fe:2:20
  │
2 │     pub def bar(x: i8, y: u8) -> i8:
  │                    ^^ attributes hash: 8158980283050389248
  │
  = Base(
        Numeric(
            I8,
        ),
    )

note: 
  ┌─ features/return_pow_i256.fe:2:27
  │
2 │     pub def bar(x: i8, y: u8) -> i8:
  │                           ^^ attributes hash: 1872326638020472004
  │
  = Base(
        Numeric(
            U8,
        ),
    )

note: 
  ┌─ features/return_pow_i256.fe:2:34
  │
2 │     pub def bar(x: i8, y: u8) -> i8:
  │                                  ^^ attributes hash: 8158980283050389248
  │
  = Base(
        Numeric(
            I8,
        ),
    )


