tests/src/snapshots/fe_compiler_tests__analysis__case_091_u16_u16_map.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "read_bar",
                        params: [
                            (
                                "key",
                                Base(
                                    Numeric(
                                        U16,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                U16,
                            ),
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "write_bar",
                        params: [
                            (
                                "key",
                                Base(
                                    Numeric(
                                        U16,
                                    ),
                                ),
                            ),
                            (
                                "value",
                                Base(
                                    Numeric(
                                        U16,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Unit,
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/u16_u16_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^ attributes hash: 7719694285943584613
  │
  = ExpressionAttributes {
        typ: Map(
            Map {
                key: Numeric(
                    U16,
                ),
                value: Base(
                    Numeric(
                        U16,
                    ),
                ),
            },
        ),
        location: Storage {
            nonce: Some(
                0,
            ),
        },
        move_location: None,
    }

note: 
  ┌─ features/u16_u16_map.fe:5:25
  │
5 │         return self.bar[key]
  │                         ^^^ attributes hash: 17931047209024117248
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U16,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/u16_u16_map.fe:5:16
  │
5 │         return self.bar[key]
  │                ^^^^^^^^^^^^^ attributes hash: 15869762792193778527
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U16,
            ),
        ),
        location: Storage {
            nonce: None,
        },
        move_location: Some(
            Value,
        ),
    }

note: 
  ┌─ features/u16_u16_map.fe:8:9
  │
8 │         self.bar[key] = value
  │         ^^^^^^^^ attributes hash: 7719694285943584613
  │
  = ExpressionAttributes {
        typ: Map(
            Map {
                key: Numeric(
                    U16,
                ),
                value: Base(
                    Numeric(
                        U16,
                    ),
                ),
            },
        ),
        location: Storage {
            nonce: Some(
                0,
            ),
        },
        move_location: None,
    }

note: 
  ┌─ features/u16_u16_map.fe:8:18
  │
8 │         self.bar[key] = value
  │                  ^^^ attributes hash: 17931047209024117248
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U16,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/u16_u16_map.fe:8:9
  │
8 │         self.bar[key] = value
  │         ^^^^^^^^^^^^^ attributes hash: 7821706407087007817
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U16,
            ),
        ),
        location: Storage {
            nonce: None,
        },
        move_location: None,
    }

note: 
  ┌─ features/u16_u16_map.fe:8:25
  │
8 │         self.bar[key] = value
  │                         ^^^^^ attributes hash: 17931047209024117248
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U16,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/u16_u16_map.fe:4:5
  │  
4 │ ╭     pub def read_bar(key: u16) -> u16:
5 │ │         return self.bar[key]
  │ ╰────────────────────────────^ attributes hash: 12498435619683893962
  │  
  = FunctionAttributes {
        is_public: true,
        name: "read_bar",
        params: [
            (
                "key",
                Base(
                    Numeric(
                        U16,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U16,
            ),
        ),
    }

note: 
  ┌─ features/u16_u16_map.fe:7:5
  │  
7 │ ╭     pub def write_bar(key: u16, value: u16):
8 │ │         self.bar[key] = value
  │ ╰─────────────────────────────^ attributes hash: 11954065445549393040
  │  
  = FunctionAttributes {
        is_public: true,
        name: "write_bar",
        params: [
            (
                "key",
                Base(
                    Numeric(
                        U16,
                    ),
                ),
            ),
            (
                "value",
                Base(
                    Numeric(
                        U16,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Unit,
        ),
    }

note: 
  ┌─ features/u16_u16_map.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub bar: Map<u16, u16>
3 │ │ 
4 │ │     pub def read_bar(key: u16) -> u16:
  · │
7 │ │     pub def write_bar(key: u16, value: u16):
8 │ │         self.bar[key] = value
  │ ╰─────────────────────────────^ attributes hash: 2552723160601654412
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "read_bar",
                params: [
                    (
                        "key",
                        Base(
                            Numeric(
                                U16,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        U16,
                    ),
                ),
            },
            FunctionAttributes {
                is_public: true,
                name: "write_bar",
                params: [
                    (
                        "key",
                        Base(
                            Numeric(
                                U16,
                            ),
                        ),
                    ),
                    (
                        "value",
                        Base(
                            Numeric(
                                U16,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Unit,
                ),
            },
        ],
        init_function: None,
        events: [],
        list_expressions: {},
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/u16_u16_map.fe:4:27
  │
4 │     pub def read_bar(key: u16) -> u16:
  │                           ^^^ attributes hash: 547894393873242964
  │
  = Base(
        Numeric(
            U16,
        ),
    )

note: 
  ┌─ features/u16_u16_map.fe:4:35
  │
4 │     pub def read_bar(key: u16) -> u16:
  │                                   ^^^ attributes hash: 547894393873242964
  │
  = Base(
        Numeric(
            U16,
        ),
    )

note: 
  ┌─ features/u16_u16_map.fe:7:28
  │
7 │     pub def write_bar(key: u16, value: u16):
  │                            ^^^ attributes hash: 547894393873242964
  │
  = Base(
        Numeric(
            U16,
        ),
    )

note: 
  ┌─ features/u16_u16_map.fe:7:40
  │
7 │     pub def write_bar(key: u16, value: u16):
  │                                        ^^^ attributes hash: 547894393873242964
  │
  = Base(
        Numeric(
            U16,
        ),
    )

note: 
  ┌─ features/u16_u16_map.fe:2:18
  │
2 │     pub bar: Map<u16, u16>
  │                  ^^^ attributes hash: 547894393873242964
  │
  = Base(
        Numeric(
            U16,
        ),
    )

note: 
  ┌─ features/u16_u16_map.fe:2:23
  │
2 │     pub bar: Map<u16, u16>
  │                       ^^^ attributes hash: 547894393873242964
  │
  = Base(
        Numeric(
            U16,
        ),
    )

note: 
  ┌─ features/u16_u16_map.fe:2:14
  │
2 │     pub bar: Map<u16, u16>
  │              ^^^^^^^^^^^^^ attributes hash: 12146385998520654072
  │
  = Map(
        Map {
            key: Numeric(
                U16,
            ),
            value: Base(
                Numeric(
                    U16,
                ),
            ),
        },
    )


